Pagina de regsitro

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -169,13 +169,7 @@
   }
 </style>
 
-<main class="main">
-  <div style="text-align: center">
-    <h1>{{ title }}</h1>
-    <p>Respuesta de la API:</p>
-    <pre *ngIf="response$ | async as response">{{ response | json }}</pre>
-  </div>
-</main>
+<main class="main"></main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
