--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<app-header></app-header>
+<router-outlet></router-outlet>
 <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
