--- a/frontend/src/app/index/index.component.html
+++ b/frontend/src/app/index/index.component.html
@@ -1,6 +1,11 @@
+<!DOCTYPE html>
+
 <div class="container">
   <h1>Bienvenido a MediCare</h1>
   <div class="button-container">
     <button routerLink="/login">Iniciar Sesión</button>
+  </div>
+  <div class="button-container">
+    <button href="/register">Iniciar Sesión</button>
   </div>
 </div>
