--- a/frontend/src/app/appointment/appointment.component.html
+++ b/frontend/src/app/appointment/appointment.component.html
@@ -23,49 +23,22 @@
       </option>
     </select>
 
-    <div class="user-details">
+    <div *ngIf="user">
       <div>
-        <label for="name">Nombre:</label>
-        <input
-          id="name"
-          formControlName="name"
-          class="form-control"
-          [value]="user?.name"
-          readonly
-        />
+        <label for="name">Nombre: </label>
+        <a>{{ user.name }}</a>
       </div>
       <div>
-        <label for="lastname">Apellidos:</label>
-        <input
-          id="lastname"
-          formControlName="lastname"
-          class="form-control"
-          [value]="user?.lastname"
-          readonly
-        />
+        <label for="lastname">Apellidos: </label>
+        <a>{{ user.lastname }}</a>
       </div>
-    </div>
-
-    <div class="user-details">
-      <div>
-        <label for="dni">DNI:</label>
-        <input
-          id="dni"
-          formControlName="dni"
-          class="form-control"
-          [value]="user?.dni"
-          readonly
-        />
+      <div *ngIf="user.client">
+        <label for="dni">DNI: </label>
+        <a>{{ user.client.cif }}</a>
       </div>
-      <div>
-        <label for="phone">Teléfono:</label>
-        <input
-          id="phone"
-          formControlName="phone"
-          class="form-control"
-          [value]="user?.phone"
-          readonly
-        />
+      <div *ngIf="user.client">
+        <label for="phone">Teléfono: </label>
+        <a>{{ user.client.tel_number }}</a>
       </div>
     </div>
   </div>
