--- a/frontend/src/app/appointment/appointment.component.css
+++ b/frontend/src/app/appointment/appointment.component.css
@@ -43,3 +43,11 @@
   display: flex;
   justify-content: space-between;
 }
+.mat-form-field {
+  width: 100%;
+  margin-top: 10px;
+}
+
+.mat-calendar {
+  font-family: "Arial", sans-serif;
+}
