--- a/frontend/src/app/appointment/appointment.component.css
+++ b/frontend/src/app/appointment/appointment.component.css
@@ -32,6 +32,27 @@
   gap: 10px;
 }
 
+/* Contenedor principal para el calendario y las horas */
+.calendar-hours-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start; /* Alinear al inicio verticalmente */
+  gap: 20px;
+  width: 70%; /* Ajusta el ancho según sea necesario */
+  height: 50%;
+  flex-wrap: wrap; /* Permite que los elementos se apilen si no hay espacio suficiente */
+}
+
+.calendar-container {
+  flex: 1; /* Ocupa una porción del espacio */
+  min-width: 300px; /* Asegura un tamaño mínimo */
+}
+
+.hours-container {
+  flex: 1; /* Ocupa una porción igual que el calendario */
+  min-width: 300px; /* Asegura un tamaño mínimo */
+}
+
 .form-section {
   width: 80%;
   display: flex;
@@ -43,6 +64,7 @@
   display: flex;
   justify-content: space-between;
 }
+
 .mat-form-field {
   width: 100%;
   margin-top: 10px;
@@ -50,4 +72,33 @@
 
 .mat-calendar {
   font-family: "Arial", sans-serif;
+}
+
+.selected-date-class {
+  background-color: #3f51b5 !important; /* Color de fondo */
+  color: white !important; /* Color del texto */
+  border-radius: 50%; /* Hacerlo circular */
+}
+.data-section {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.data-container {
+  flex: 1; /* Ocupa una porción igual que el calendario */
+  min-width: 300px; /* Asegura un tamaño mínimo */
+  height: 50%;
+}
+/* Media query para pantallas estrechas */
+@media (max-width: 768px) {
+  .calendar-hours-container {
+    flex-direction: column; /* Apila los elementos en lugar de alinearlos en fila */
+    align-items: center; /* Centra los elementos en pantallas estrechas */
+  }
+
+  .calendar-container,
+  .hours-container {
+    width: 100%; /* Asegura que ocupen todo el ancho disponible */
+    min-width: unset; /* Elimina el tamaño mínimo en pantallas pequeñas */
+  }
 }
