--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <header class="header">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -36,16 +35,33 @@
           <li class="nav-item" *ngIf="!user">
             <a class="nav-link" routerLink="/register">Registrarse</a>
           </li>
-
           <li class="nav-item" *ngIf="user">
-            <a class="nav-link">Bienvenido, {{ user.name }}</a>
+            <a
+              class="nav-link"
+              routerLink="/profile"
+              id="userDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-person-circle"
+                viewBox="0 0 16 16"
+              >
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                <path
+                  fill-rule="evenodd"
+                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"
+                />
+              </svg>
+            </a>
           </li>
           <li class="nav-item" *ngIf="user">
-            <a class="nav-link">
-              <button class="dropdown-item" (click)="logout()">
-                Cerrar Sesión
-              </button>
-            </a>
+            <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
           </li>
         </ul>
       </div>
