--- a/frontend/src/app/shared/header/header.component.css
+++ b/frontend/src/app/shared/header/header.component.css
@@ -64,3 +64,9 @@ a {
   border: 2px solid #ddd;
   padding: 2px;
 }
+.logo img {
+  width: 30px;
+  height: auto;
+  display: inline-block;
+  margin-right: 10px; /* Espacio entre el icono y el texto */
+}
