--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -63,7 +63,7 @@
             required
           />
         </div>
-        <button type="submit" class="btn">Registrarse</button>
+        <button type="submit" class="btn btn-primary">Registrarse</button>
       </form>
       <p class="text-center">
         Ya tienes una cuenta? <a href="/login">Inicia sesión aquí</a>
