Pagina de citas vista de medico

--- a/frontend/src/app/admin-doctors/admin-doctors.component.html
+++ b/frontend/src/app/admin-doctors/admin-doctors.component.html
@@ -59,6 +59,8 @@
               Limpiar Filtros
             </button>
             <!-- Botón para añadir un nuevo médico -->
+          </div>
+          <div class="button-container2">
             <button
               class="btn btn-success mt-3"
               (click)="navigateToAddDoctor()"
