--- a/frontend/src/app/admin-doctors/admin-doctors.component.css
+++ b/frontend/src/app/admin-doctors/admin-doctors.component.css
@@ -55,3 +55,13 @@
 .table tr:nth-child(even) {
   background-color: #f2f2f2;
 }
+.button-container {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+.button-container2 {
+  align-items: center;
+  gap: 10px;
+  margin-top: 10px;
+}
