--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -43,6 +43,14 @@
           </li>
           <li
             class="nav-item"
+            *ngIf="user && user.role && user.role.name === 'doctor'"
+          >
+            <a class="nav-link" routerLink="/doctor-appointment"
+              >Gestionar Citas</a
+            >
+          </li>
+          <li
+            class="nav-item"
             *ngIf="user && user.role && user.role.name === 'admin'"
           >
             <a class="nav-link" routerLink="/adminappointments"
