--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -45,10 +45,11 @@
             class="nav-item"
             *ngIf="user && user.role && user.role.name === 'doctor'"
           >
-            <a class="nav-link" routerLink="/doctor-appointment"
+            <a class="nav-link" routerLink="/doctor-appointments"
               >Gestionar Citas</a
             >
           </li>
+
           <li
             class="nav-item"
             *ngIf="user && user.role && user.role.name === 'admin'"
@@ -100,7 +101,9 @@
             </a>
           </li>
           <li class="nav-item" *ngIf="user">
-            <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
+            <a class="nav-link" (click)="logout()" routerLink="/login"
+              >Cerrar Sesión</a
+            >
           </li>
         </ul>
       </div>
