--- a/frontend/src/app/appointment/appointment.component.html
+++ b/frontend/src/app/appointment/appointment.component.html
@@ -1,81 +1,98 @@
-<div class="appointment-container">
-  <br />
-  <br />
-  <br />
+<div
+  *ngIf="!user; else appointmentFormTemplate"
+  class="not-authenticated-container"
+>
+  <br /><br /><br />
+  <h1>¡Bienvenido!</h1>
+  <p>
+    Para pedir una cita médica, por favor
+    <a routerLink="/register" class="link">regístrate</a> o
+    <a routerLink="/login" class="link">inicia sesión</a>.
+  </p>
+</div>
 
-  <form [formGroup]="appointmentForm" (ngSubmit)="onSubmit()">
-    <div class="calendar-hours-container">
-      <!-- Calendario -->
-      <div class="calendar-container">
-        <h2>Selecciona una fecha:</h2>
-        <mat-calendar
-          (selectedChange)="onDateChange($event)"
-          [dateClass]="dateClass"
-          [dateFilter]="isDateDisabled"
-        ></mat-calendar>
-      </div>
-
-      <!-- Horas disponibles -->
-      <div class="hours-container">
-        <h2>Horario disponible:</h2>
-        <div class="schedule-grid">
-          <button
-            *ngFor="let time of availableTimes"
-            class="btn btn-light"
-            (click)="onTimeSelect(time, $event)"
-            type="button"
-          >
-            {{ time }}
-          </button>
-        </div>
-      </div>
-    </div>
-    <hr />
-    <!-- Desplegable para seleccionar médico -->
-    <div class="">
-      <p *ngIf="selectedDate">Fecha : {{ selectedDate | date : "fullDate" }}</p>
-      <p *ngIf="!selectedDate">Por favor, selecciona una fecha.</p>
-      <p *ngIf="selectedTime">Hora: {{ selectedTime }}</p>
-    </div>
-    <hr />
-    <div class="form-section">
-      <label for="doctor">Médico:</label>
-      <select id="doctor" formControlName="doctor" class="form-control">
-        <option *ngFor="let doctor of doctors" [value]="doctor.id">
-          {{ doctor.name }} {{ doctor.lastname }}
-        </option>
-      </select>
-    </div>
+<ng-template #appointmentFormTemplate>
+  <div class="appointment-container">
     <br />
-    <!-- Información del usuario -->
-    <div *ngIf="user">
-      <div class="data-section">
-        <div class="data-container">
-          <label for="name">Nombre: </label>
-          <a>{{ user.name }}</a>
+    <br />
+    <br />
+
+    <form [formGroup]="appointmentForm" (ngSubmit)="onSubmit()">
+      <div class="calendar-hours-container">
+        <!-- Calendario -->
+        <div class="calendar-container">
+          <h2>Selecciona una fecha:</h2>
+          <mat-calendar
+            (selectedChange)="onDateChange($event)"
+            [dateClass]="dateClass"
+            [dateFilter]="isDateDisabled"
+          ></mat-calendar>
         </div>
-        <div class="data-container">
-          <label for="lastname">Apellidos: </label>
-          <a>{{ user.lastname }}</a>
+
+        <!-- Horas disponibles -->
+        <div class="hours-container">
+          <h2>Horario disponible:</h2>
+          <div class="schedule-grid">
+            <button
+              *ngFor="let time of availableTimes"
+              class="btn btn-light"
+              (click)="onTimeSelect(time, $event)"
+              type="button"
+            >
+              {{ time }}
+            </button>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <!-- Desplegable para seleccionar médico -->
+      <div class="">
+        <p *ngIf="selectedDate">
+          Fecha : {{ selectedDate | date : "fullDate" }}
+        </p>
+        <p *ngIf="!selectedDate">Por favor, selecciona una fecha.</p>
+        <p *ngIf="selectedTime">Hora: {{ selectedTime }}</p>
+      </div>
+      <hr />
+      <div class="form-section">
+        <label for="doctor">Médico:</label>
+        <select id="doctor" formControlName="doctor" class="form-control">
+          <option *ngFor="let doctor of doctors" [value]="doctor.id">
+            {{ doctor.name }} {{ doctor.lastname }}
+          </option>
+        </select>
+      </div>
+      <br />
+      <!-- Información del usuario -->
+      <div *ngIf="user">
+        <div class="data-section">
+          <div class="data-container">
+            <label for="name">Nombre: </label>
+            <a>{{ user.name }}</a>
+          </div>
+          <div class="data-container">
+            <label for="lastname">Apellidos: </label>
+            <a>{{ user.lastname }}</a>
+          </div>
+        </div>
+        <br />
+        <div>
+          <div class="data-section">
+            <div *ngIf="user.client" class="data-container">
+              <label for="dni">DNI: </label>
+              <a>{{ user.client.cif }}</a>
+            </div>
+            <div *ngIf="user.client" class="data-container">
+              <label for="phone">Teléfono: </label>
+              <a>{{ user.client.tel_number }}</a>
+            </div>
+          </div>
         </div>
       </div>
       <br />
-      <div>
-        <div class="data-section">
-          <div *ngIf="user.client" class="data-container">
-            <label for="dni">DNI: </label>
-            <a>{{ user.client.cif }}</a>
-          </div>
-          <div *ngIf="user.client" class="data-container">
-            <label for="phone">Teléfono: </label>
-            <a>{{ user.client.tel_number }}</a>
-          </div>
-        </div>
+      <div class="form-button-container">
+        <button type="submit" class="btn btn-primary">Crear Cita</button>
       </div>
-    </div>
-    <br />
-    <div class="form-button-container">
-      <button type="submit" class="btn btn-primary">Crear Cita</button>
-    </div>
-  </form>
-</div>
+    </form>
+  </div>
+</ng-template>
