--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -21,13 +21,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/">Inicio</a>
+            <a class="nav-link" routerLink="/index">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/about">Sobre nosotros</a>
+            <a class="nav-link" routerLink="/mantenimiento">Sobre nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/doctors">Médicos</a>
+            <a class="nav-link" routerLink="/mantenimiento">Médicos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/appointment">Pide Cita</a>
@@ -64,6 +64,14 @@
           >
             <a class="nav-link" routerLink="/admin-clients"
               >Gestionar Clientes</a
+            >
+          </li>
+          <li
+            class="nav-item"
+            *ngIf="user && user.role && user.role.name === 'admin'"
+          >
+            <a class="nav-link" routerLink="/admin-contracts"
+              >Gestionar Contratos</a
             >
           </li>
           <li
