--- a/frontend/src/app/admin-appointments/admin-appointments.component.html
+++ b/frontend/src/app/admin-appointments/admin-appointments.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -51,6 +51,23 @@
             Filtrar por Doctor
           </button>
         </div>
+        <div>
+          <label>Estado:</label>
+
+          <select [(ngModel)]="filters.status" class="form-control">
+            <option value="">Todos</option>
+
+            <option value="0">Pendiente</option>
+
+            <option value="1">Completa</option>
+
+            <option value="2">Cancelada</option>
+          </select>
+
+          <button class="btn btn-primary" (click)="applyFilters()">
+            Filtrar por Estado
+          </button>
+        </div>
       </div>
 
       <div class="appointments-table">
@@ -62,6 +79,7 @@
               <th>Hora</th>
               <th>Cliente</th>
               <th>Doctor</th>
+              <th>Estado</th>
               <th>Pendiente</th>
               <th>Completa</th>
               <th>Cancelada</th>
@@ -77,6 +95,14 @@
               </td>
               <td>
                 {{ appointment.doctor_name }} {{ appointment.doctor_lastname }}
+              </td>
+              <td>
+                <!-- Mostrar el estado en texto -->
+
+                <span *ngIf="appointment.status === 0">Pendiente</span>
+                <span *ngIf="appointment.status === 1">Completa</span>
+
+                <span *ngIf="appointment.status === 2">Cancelada</span>
               </td>
               <td>
                 <button
